# django-webpack-loader

./: .coveralls.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new_feature.md
example/: package.json  requirements.txt  server.js
example/assets/: webpack-stats.json  webpack.config.js
examples/: README.md
examples/code-splitting/: babel.config.js  package-lock.json  package.json  requirements.txt  webpack-stats.json  webpack.config.js
examples/dynamic-imports/: manage.py  package-lock.json  package.json  webpack.config.js
examples/hot-reload/: README.md  package-lock.json  package.json  server.js  webpack-stats.json  webpack.config.js
examples/simple/: db.sqlite3  package-lock.json  package.json  webpack-stats.json  webpack.config.js
tests/: .coveragerc  db.sqlite3  install.sh  manage.py  package-lock.json  package.json  requirements.txt  tox.ini  webpack-stats-app2.json  webpack-stats-getFiles.json  webpack-stats.json  webpack.config.app2.js  webpack.config.assets.js  webpack.config.error.js  webpack.config.getFiles.js  webpack.config.gzipTest.js  webpack.config.integrity.js  webpack.config.multientries.js  webpack.config.multipleEntrypoints.js  webpack.config.publicPath.js  webpack.config.queryString.js  webpack.config.simple.js  webpack.config.skipCommon.js  webpack.config.sourcemaps.js  webpack.config.split.js  webpack.config.v4.js  webpack_loader
tests/app/: context_processors.py  settings.py  urls.py
tests/assets/: exported_assets.js  webpack-stats.json  webpack.config.error.js  webpack.config.simple.js  webpack.config.split.js
tests_webpack5/: .gitignore  package-lock.json  package.json  webpack.config.integrity.js  webpack.config.js
webpack_loader/: __init__.py  apps.py  config.py  context.py  context_processors.py  errors.py  exceptions.py  loader.py  loaders.py  utils.py
(+126 files in other folders)
