[tool.poetry]
name = "django-webpack5-loader"
version = "0.9.0"
description = "Transparently use webpack with django"
authors = ["MrP01 <peter@waldert.at>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrP01/django-webpack-loader"
keywords = ["django", "webpack", "assets"]
packages = [{ include = "webpack_loader" }]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
