[tool.poetry]
name = "django-webpack5-loader"
version = "0.9.0"
description = "Transparently use webpack with django"
authors = ["MrP01 <peter@waldert.at>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrP01/django-webpack-loader"
keywords = ["django", "webpack", "assets"]
packages = [{ include = "webpack_loader" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.13.9"
isort = "^5.10.1"

[tool.poetry.group.demo.dependencies]
Django = "^4.0.4"
Jinja2 = "^3.1.2"
django-jinja = "^2.10.2"

[tool.nitpick]
style = ["github://MrP01/lint-me-now/nitpick-base-style.toml", "github://MrP01/lint-me-now/nitpick-python-style.toml"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint]

[tool.pylint.MASTER]
jobs = 1
extension-pkg-whitelist = "pydantic"
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
] # because this is just a fork

[tool.pylint.BASIC]
good-names-rgxs = "^[_a-z][_a-z0-9]?$"

[tool.pylint.REPORTS]
output-format = "colorized"

[tool.pylint.FORMAT]
max-line-length = 120
max-module-lines = 1000
indent-after-paren = 4

[tool.flakeheaven]
ignore = "D107,D202,D203,D401,E203,E402,E501,W503"
max_line_length = 120
inline-quotes = "double"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
